minor minor changes

--- a/views/qr_response.ejs
+++ b/views/qr_response.ejs
@@ -34,7 +34,7 @@
                     <div class="row mb-3">
                         <div class="col-lg-2"> <strong> URL </strong> </div>
                         <div class="col-lg-10">
-                            <strong><code>/show? &ltecl, data&gt</code></strong>
+                            <strong><code>/</code></strong>
                         </div>
                     </div>
                     <hr>
