--- a/views/qr_response.ejs
+++ b/views/qr_response.ejs
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top p-3 pl-4">
-        <div class="h5 text-center"> <strong> UNISOFT x NITK : QR Code Generator </strong> </div>
+        <div class="h5 text-center"> <strong> iHART : QR Code Generator </strong> </div>
     </nav>
 
     <div class="row card-deck m-3">
